[project]
name = "hl7"
version = "0.0.1"
description = "Statically typed HL7 Builder & Parser Python Library"
authors = [
    {name = "Kevin Pham", email = "kevin.pham@accucodeai.com"},
]
readme = "README.md"
requires-python = ">=3.12"
[project.optional-dependencies]
v2_1 = []
v2_2 = []
v2_3 = []
v2_3_1 = []
v2_4 = []
v2_5 = []
v2_5_1 = []
v2_6 = []
v2_7 = []
v2_7_1 = []
v2_8 = []
all = ["hl7[v2_1,v2_2,v2_3,v2_3_1,v2_4,v2_5,v2_5_1,v2_6,v2_7,v2_7_1,v2_8]"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hl7"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pytest>=8.3.2",
    "ruff>=0.6.2",
    "requests-cache>=1.2.1",
    "jinja2>=3.1.4",
]
