[project]
name = "hl7"
version = "0.0.1"
description = "Statically typed HL7 Builder & Parser Python Library"
authors = [
    {name = "Kevin Pham", email = "kevin.pham@accucodeai.com"},
]
readme = "README.md"
requires-python = ">=3.12"
[project.optional-dependencies]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hl7"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pytest>=8.3.2",
    "ruff>=0.6.2",
    "requests-cache>=1.2.1",
    "jinja2>=3.1.4",
]
